examples/test/testpolicy10843.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10843
  namespace: namespace427
spec:
  podSelector:
    matchLabels:
      key4: value35
      key29: value49
      key44: value25
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key29: value21
          key13: value27
          key4: value9
      podSelector:
        matchLabels:
          key11: value45
          key25: value0
          key48: value41
